<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ali">
    <TextView
        android:id="@+id/loginscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/login_text"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/fstTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="340dp"
        android:layout_marginTop="60dp"
        android:textColor="#000000"
        android:textSize="30sp"
        android:text="@string/email_text"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:ems="10" />

    <TextView
        android:id="@+id/secTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:layout_marginLeft="307dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="#000000"/>
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:ems="10" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="#3C040001"
        android:textStyle="bold"
        android:text="@string/login_button_text"
        android:textSize="30sp" />

    <TextView android:id="@+id/lblSignUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/signUp_text_login"
        android:gravity="center"
        android:textSize="30dp"
        android:textColor="#000000"/>
</LinearLayout>